--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <h1 class="name">Luiza Santos Peinado</h1>
         <p>Estagiária de Cybersecurity | Blue Team Intern na Honda</p>
         <span class="scroll">Scroll down</span>
+        
     </div>
 
     <section class="about">
         <h2>Sobre Mim</h2>
-        <p>Sou estudante de Sistemas de Informação com foco em Cybersecurity e experiência em defesa de rede e proteção contra ataques cibernéticos. Apaixonada por tecnologia e segurança da informação, busco aprimorar minhas habilidades e contribuir para a proteção dos dados e da privacidade das pessoas.</p>
+        <p>Sou apaixonada por segurança da informação e defesa cibernética é </p>
     </section>
 
     <section class="experience">
